tests/compile_fail/eq/unknow_variant_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/eq/unknow_variant_attribute.rs:3:10
  |
3 |     #[eq(unknown)]
  |          ^^^^^^^
